# coach_bot

./: Dockerfile  Makefile  README.md  example.env  pyproject.toml
coach_bot/: bot.py
coach_bot/constants/: messages.py
coach_bot/data/: config.py
coach_bot/dialogs/: __init__.py  code_login.py  guest_menu.py  registration.py
coach_bot/dialogs/common/: utils.py
coach_bot/dialogs/common/handlers/: on_not_implemented.py
coach_bot/dialogs/common/widgets/: buttons.py  profile_display.py
coach_bot/dialogs/plan_create/: getters.py  handlers.py  plan_create_dialog.py
coach_bot/dialogs/profile_form/: getters.py  profile_form.py  profile_form_dialog.py
coach_bot/dialogs/profile_form/handlers/: checkbox_handlers.py  input_handlers.py  utils.py  validators.py
coach_bot/dialogs/progress/: getter.py  progress_dialog.py
coach_bot/dialogs/schedule/: getters.py  schedule_dialog.py
coach_bot/dialogs/user_menu/: getters.py  profile_dialog.py  settings_menu_dialog.py  user_menu.py  user_menu_dialog.py
coach_bot/dialogs/user_menu/handlers/: main_menu_handlers.py  settings_handlers.py
coach_bot/dialogs/user_plan/: getters.py  user_plan_dialog.py
coach_bot/dialogs/workout/: getters.py  handlers.py  workout_dialog.py
coach_bot/exceptions/: api.py
coach_bot/handlers/test/: test.py
coach_bot/handlers/user/: __init__.py  backup_codes.py  login.py  menu.py  registration.py  start.py
coach_bot/keyboards/default/: consts.py  menu.py  registration.py
coach_bot/keyboards/inline/: callbacks.py  consts.py
coach_bot/keyboards/inline/user/: weekly.py
coach_bot/keyboards/keyboard_utils/: schema_generator.py
coach_bot/models/: __init__.py  base.py  feedback.py  schemas.py  workout.py
coach_bot/services/: coach_api.py  user_client.py
coach_bot/states/: __init__.py  login.py  menu.py  registration.py  user.py
coach_bot/utils/: constants.py  logging.py  parse_time.py  utils.py
coach_bot/web_handlers/: tg_updates.py
scripts/: replace_slug.sh
